# cognee-jart-on

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
cognee_jart_on/: __init__.py  bootstrap.py  cli.py  config.py  mcp_server.py  server.py  tools.py
docs/: definitive-knowledge-base-architecture.md  distributed-knowledge-base-analysis.md  knowledge-base-architecture.md  knowledge-base-deep-research.md  name-candidates.md
docs/services/: env-template.txt  litellm_config.yaml
examples/: basic_usage.py  p2p_peer.py
scripts/: setup.sh  start-services.sh
tests/: conftest.py  test_bootstrap.py  test_cli.py  test_config.py  test_e2e.py  test_mcp_server.py  test_quality.py  test_services.py  test_tools.py
