[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognee-jart-on"
version = "0.2.0"
description = "Cognee jarta on — P2P integration for Cognee with LiteLLM proxy and local embeddings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ruben Alvarez Dianez", email = "ruben.alvarez.dev@gmail.com"},
]
keywords = ["cognee", "knowledge-base", "memory", "litellm", "ai-agent", "p2p"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "cognee>=1.0.0",
    "fastembed>=0.5.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
mcp = [
    "mcp>=1.0.0",
]
all = [
    "cognee-jart-on[dev,server,mcp]",
]

[project.scripts]
cognee-jart-on = "cognee_jart_on.cli:cli"

[project.urls]
Homepage = "https://github.com/user/cognee-jart-on"
Repository = "https://github.com/user/cognee-jart-on"
Issues = "https://github.com/user/cognee-jart-on/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
